# Neuron-vehicles

./: .gitignore  .travis.yml  Binoculus.cpp  Binoculus.hpp  CMakeLists.txt  NBV.cpp  NBV.h  NRWindow.cpp  NRWindow.hpp  README.md  a.out  brait032.cpp  config.hpp.in  glutMaster.cpp  glutMaster.h  glutWindow.cpp  install_catch2.sh  nrWindow.cpp  nrWindow.h  testbvini.cpp
include/Neuron-vehicles/: README.md
scripts/: install_catch2.sh
src/: Binoculus.cpp  Binoculus.hpp  NBV.hpp  config.hpp.in  constants.hpp  glutMaster.hpp  glutWindow.hpp  vehicle_types.hpp
tests/: README.md  tests-glutWindow.cpp
